--- a/src/scss/theme.scss
+++ b/src/scss/theme.scss
@@ -3,27 +3,35 @@
 // normalize
 @import "../../node_modules/normalize.css/normalize";
 
-// variables
-$version:           '1.0.3';
-$bg-light:          #f3f3f1;
-$font-color-navy:   #002953;
-$font-family-base:  -apple-system, BlinkMacSystemFont, "Segoe UI", Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji";
-$font-size-base:    16px;
-$screen-mobile:     640px;
-$screen-tablet:     768px;
-$screen-laptop:     1024px;
-$screen-display:    1280px;
-$screen-full:       1440px;
+// sass variables
+@import "variables";
+
+// css variables
+:root {
+    --bg-normal:        #{$bg-light};
+    --bg-dark:          #{$bg-dark};
+    --border-normal:    #{$border-light};
+    --border-dark:      #{$border-dark};
+    --text-normal:      #{$font-color-navy};
+    --text-normal-hl:   #{$font-color-navier};
+    --text-dark:        #{$font-color-gray};
+    --text-dark-hl:     #{$font-color-white};
+    --font-base:        #{$font-size-base};
+    --link-tb-normal:   #{$link-tb-normal};
+    --link-tb-dark:     #{$link-tb-dark};
+    --link-gh-normal:   #{$link-gh-normal};
+    --link-gh-dark:     #{$link-gh-dark};
+}
 
 // icons
 @import "icons";
 
 // fit and finish
 body {
-    background: $bg-light;
+    background: var(--bg-normal);
     display: flex;
     flex-direction: column;
-    font-size: $font-size-base;
+    font-size: var(--font-base);
     height: 100vh;
     justify-content: space-between;
     overflow: hidden;
@@ -31,26 +39,27 @@ body {
 }
 
 main {
-    border-top: 1vmin solid #fff;
-    padding: 6vmin;
+    border-top: 1vmax solid var(--border-normal);
+    padding: 5vmin 6vmin 0;
 
     h1 {
-        color: $font-color-navy;
+        color: var(--text-normal);
         font-family: $font-family-base;
         font-size: 4rem; // basic fallback
         font-size: 10vmin; // premium fallback
-        font-size: max(10vmin, 24px);
+        font-size: max(10vmin, 26px);
         font-weight: 700;
-        line-height: 1.15;
+        line-height: max(11vmin, 32px);
         margin: 0;
 
         span.who {
+            color: var(--text-normal-hl);
             display: block;
             font-weight: 900;
         }
 
         a {
-            color: #0069ff;
+            color: var(--link-tb-normal);
             text-decoration: none;
         }
     }
@@ -61,16 +70,16 @@ footer {
     display: flex;
     flex-direction: row;
     justify-content: start;
-    padding: 6vmin;
+    padding: 5vmin 6vmin;
 
     a {
         font-size: 3rem; // basic fallback
         font-size: 5vmin; // premium fallback
-        font-size: max(5vmin, 32px);
+        font-size: max(8vmin, 36px);
         margin-right: 4vmin;
 
         &.github {
-            color: #24292e;
+            color: var(--link-gh-normal);
         }
 
         &.mastodon {
@@ -114,14 +123,8 @@ a {
 
 }
 
+// schemes
+@import "dark";
+
 // media queries
-@media only screen and (min-width: $screen-display) {
-    main {
-        padding-right: 20vmin;
-    }
-}
-@media only screen and (min-width: $screen-full) {
-    main {
-        padding-right: 32vmin;
-    }
-}
+@import "media";
