Adds blog link with new rss icon, more padding on wider screens

--- a/src/scss/_dark.scss
+++ b/src/scss/_dark.scss
@@ -22,5 +22,8 @@
         a.github {
             color: var(--link-gh-dark);
         }
+        a.blog {
+            color: var(--link-blog-dark);
+        }
     }
 }
