--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -15,6 +15,8 @@ $link-tb-normal:        #0069ff;
 $link-tb-dark:          #29baff;
 $link-gh-normal:        #24292e;
 $link-gh-dark:          #f1f1f1;
+$link-blog-normal:      #736be3;
+$link-blog-dark:        #9690ea;
 $screen-mobile:         640px;
 $screen-tablet:         768px;
 $screen-laptop:         1024px;
