Updates footer links to self hosted services

--- a/src/scss/_dark.scss
+++ b/src/scss/_dark.scss
@@ -19,11 +19,17 @@
         }
     }
     footer {
+        a.blog {
+            color: var(--link-blog-dark);
+        }
+        a.gitea {
+            color: var(--link-gitea-dark);
+        }
         a.github {
             color: var(--link-gh-dark);
         }
-        a.blog {
-            color: var(--link-blog-dark);
+        a.pixelfed {
+            color: var(--link-pf-dark);
         }
     }
 }
