--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -17,6 +17,10 @@ $link-gh-normal:        #24292e;
 $link-gh-dark:          #f1f1f1;
 $link-blog-normal:      #736be3;
 $link-blog-dark:        #9690ea;
+$link-gitea-normal:     #1bc47d;
+$link-gitea-dark:       #87b081;
+$link-pf-normal:        #66cccc;
+$link-pf-dark:          #78c2c3;
 $screen-mobile:         640px;
 $screen-tablet:         768px;
 $screen-laptop:         1024px;
